// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data cell component renders correctly 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-body test-class MuiTableCell-sizeSmall"
  role="cell"
  style={
    Object {
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <ArrowTooltip
    enterDelay={500}
    style={
      Object {
        "flex": 1,
      }
    }
    title="non nested property"
  >
    <WithStyles(ForwardRef(Typography))
      noWrap={true}
      variant="body2"
    >
      non nested property
    </WithStyles(ForwardRef(Typography))>
  </ArrowTooltip>
  <div
    style={
      Object {
        "height": "100%",
        "marginLeft": 18,
        "paddingLeft": "4px",
        "paddingRight": "4px",
      }
    }
  >
    <WithStyles(ForwardRef(Divider))
      flexItem={true}
      orientation="vertical"
      style={
        Object {
          "height": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Data cell component renders nested cell data correctly 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-body test-class MuiTableCell-sizeSmall"
  role="cell"
  style={
    Object {
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <ArrowTooltip
    enterDelay={500}
    style={
      Object {
        "flex": 1,
      }
    }
    title="nested property"
  >
    <WithStyles(ForwardRef(Typography))
      noWrap={true}
      variant="body2"
    >
      nested property
    </WithStyles(ForwardRef(Typography))>
  </ArrowTooltip>
  <div
    style={
      Object {
        "height": "100%",
        "marginLeft": 18,
        "paddingLeft": "4px",
        "paddingRight": "4px",
      }
    }
  >
    <WithStyles(ForwardRef(Divider))
      flexItem={true}
      orientation="vertical"
      style={
        Object {
          "height": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`Data cell component renders provided cell data correctly 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-body test-class MuiTableCell-sizeSmall"
  role="cell"
  style={
    Object {
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <ArrowTooltip
    enterDelay={500}
    style={
      Object {
        "flex": 1,
      }
    }
    title="provided test"
  >
    <WithStyles(ForwardRef(Typography))
      noWrap={true}
      variant="body2"
    >
      <b>
        provided test
      </b>
    </WithStyles(ForwardRef(Typography))>
  </ArrowTooltip>
  <div
    style={
      Object {
        "height": "100%",
        "marginLeft": 18,
        "paddingLeft": "4px",
        "paddingRight": "4px",
      }
    }
  >
    <WithStyles(ForwardRef(Divider))
      flexItem={true}
      orientation="vertical"
      style={
        Object {
          "height": "100%",
        }
      }
    />
  </div>
</div>
`;
